[Component/ShopifyCommentsForm] write / show comments and scroll after request to comments anachor

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -10,6 +10,14 @@ h1, .h1 {
   @extend .text-serif;
 }
 
+.lead {
+  letter-spacing: 0.05rem;
+}
+
+.text-size-base {
+  font-size: $font-size-base !important;
+}
+
 .text-normal, // <- TODO remove
 .text-decoration-normal
 {
