--- a/src/ts/components/_components.scss
+++ b/src/ts/components/_components.scss
@@ -2,6 +2,7 @@
 @import './shopify-filter/shopify-filter.component.scss';
 @import './shopify-cart/shopify-cart.component.scss';
 @import './shopify-cart-button/shopify-cart-button.component.scss';
+@import './shopify-comments-form/shopify-comments-form.component.scss';
 @import './shopify-login-form/shopify-login-form.component.scss';
 @import './shopify-product/shopify-product.component.scss';
 @import './shopify-product-item/shopify-product-item.component.scss';
