--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -51,5 +51,27 @@
 
   {% include 'jumplink-debug-bar' %}
 
+  <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "{{ shop.name }}",
+    "logo": "https:{{ 'iconset-logo.svg' | asset_url }}",
+    {% comment %}
+    "sameAs": [
+      "{{ settings.social_twitter_link }}",
+      "{{ settings.social_facebook_link }}",
+      "{{ settings.social_pinterest_link }}",
+      "{{ settings.social_instagram_link }}",
+      "{{ settings.social_tumblr_link }}",
+      "{{ settings.social_snapchat_link }}",
+      "{{ settings.social_youtube_link }}",
+      "{{ settings.social_vimeo_link }}"
+    ],
+    {% endcomment %}
+    "url": "{{ shop.url }}{{ page.url }}"
+  }
+</script>
+
 </body>
 </html>
