--- a/theme/templates/index.liquid
+++ b/theme/templates/index.liquid
@@ -1,1 +1,15 @@
 {{ content_for_index  }}
+
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "WebSite",
+    "name": "{{ shop.name }}",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "{{ shop.url }}/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    },
+    "url": "{{ shop.url }}{{ page.url }}"
+  }
+</script>
