--- a/theme/snippets/jumplink-pagination.liquid
+++ b/theme/snippets/jumplink-pagination.liquid
@@ -38,7 +38,7 @@
       {% endcomment %}
 
       {% if paginate.next.is_link %}
-        <a class="cursor-pointer pt-5" rv-route-append-on-click='{"url": "{{ paginate.next.url }}{{ paginate_hash }}", "appendToSelector": ".rv-view-container", "removeAfterLoad": true}' aria-label="{{ 'snippets.jumplink-pagination.load_more' | t }}">
+        <a class="cursor-pointer pt-5" rv-route-append-on-click='{"url": "{{ paginate.next.url }}{{ paginate_hash }}", "appendToSelector": ".rv-view-container", "removeAfterLoad": true, "replaceHistory": true}' aria-label="{{ 'snippets.jumplink-pagination.load_more' | t }}">
           <span>{{ 'snippets.jumplink-pagination.load_more' | t }}</span>
         </a>
       {% endif %}
