--- a/theme/templates/article.liquid
+++ b/theme/templates/article.liquid
@@ -15,28 +15,60 @@
   {% assign video = article.metafields["global"]["video-url-1"] %}
 {% endif %}
 
-{% paginate article.comments by 50 %}
-  {% comment %}
-    When a comment has just been submitted, it's not shown right away.
-    Shopify needs to wait until it knows for sure that it is not spam to publish it.
-    We can still show right away *to its author* the comment he just submitted 
-    — although that comment may not have been published yet.
-    When a comment is submitted, the browser is redirected to a page that 
-    includes the new comment id in its URL. Example:
-    http://shopname.myshopify.com/blogs/news/2022072-my-post?comment=3721372
-    When a comment ID is specified in an article URL, that comment is accessible in the 
-    template through a Liquid object called comment. 
-    That comment is a full-fledged comment variable that has all the regular comment properties: 
-    http://docs.shopify.com/themes/liquid-variables/comment.
-    Note that comment.created_at will only be defined if the comment did not have any blank field 
-    — was posted without error.
-  {% endcomment %}
-
+{% paginate article.comments by 5 %}
   {% case type %}
     {% when 'magazine' %}
-        {% include 'jumplink-article-list-item-view-magazine', color: color, images: images, video: video, showDetail: true %}
+      {% include 'jumplink-article-list-item-view-magazine', comments, article, blog, color: color, images: images, video: video, showDetail: true %}
     {% else %}
-        {% include 'jumplink-article-list-item-view-magazine', color: color, images: images, video: video, showDetail: true %}
+      {% include 'jumplink-article-list-item-view-magazine', comments, article, blog, color: color, images: images, video: video, showDetail: true %}
   {% endcase %}
-
 {% endpaginate %}
+
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Article",
+  "articleBody": "{{ article.content | strip_html }}",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "{{ shop.url }}{{ page.url }}"
+  },
+  "headline": "{{ article.title }}",
+  {% if article.excerpt != blank %}
+    "description": "{{ article.excerpt | strip_html }}",
+  {% endif %}
+  {% if article.image %}
+    {% assign image_size = article.image.width | append: 'x' %}
+    "image": [
+      "https:{{ article | img_url: image_size }}"
+    ],
+  {% endif %}
+  "datePublished": "{{ article.published_at | date: '%Y-%m-%dT%H:%M:%SZ' }}",
+  "dateCreated": "{{ article.created_at | date: '%Y-%m-%dT%H:%M:%SZ' }}",
+  "author": {
+    "@type": "Person",
+    "name": "{{ article.author }}"
+  },
+  "publisher": {
+    "@type": "Organization",
+    {% if settings.share_image %}
+      {% assign image_size = settings.share_image.width | append: 'x' %}
+      "logo": {
+        "@type": "ImageObject",
+        "height": "{{ settings.share_image.height }}",
+        "url": "https:{{ settings.share_image | img_url: image_size }}",
+        "width": "{{ settings.share_image.width }}"
+      },
+    {% elsif article.image %}
+      {% assign image_size = article.image.width | append: 'x' %}
+      "logo": {
+        "@type": "ImageObject",
+        "height": "{{ article.image.height }}",
+        "url": "https:{{ article.image | img_url: image_size }}",
+        "width": "{{ article.image.width }}"
+      },
+    {% endif %}
+    "name": "{{ shop.name }}"
+  }
+}
+</script>
