--- a/theme/snippets/jumplink-article-comments-list.liquid
+++ b/theme/snippets/jumplink-article-comments-list.liquid
@@ -1,19 +1,25 @@
-{% if number_of_comments > 0 %}
-  <div class="lead">
-    <h3 class="h1 text-serif font-weight-normal">Comments on {{article.title}}</h3>
-  </div>
+<div class="mt-5">
+  {% if number_of_comments > 0 %}
+    <div class="lead">
+      <h3 class="h1 text-serif font-weight-normal">Comments on {{article.title}}</h3>
+    </div>
 
-  <ul class="list-unstyled">
-    {% comment %}
-      Display comment from URL parameters if it is waiting moderation
-      We added "comment.id" check to make sure we don't display markup if there are form errors
-    {% endcomment %}
-    {% if comment and comment.status != 'published' and comment.id != blank %}
-      {% include 'jumplink-article-comment' with blog, article, comment, number_of_comments, new_comment %}
+    <ul class="list-unstyled" rv-view='{"listenAllLinks": false, "containerSelector": "#comments-pagination", "scrollToTop": false, "action": "append"}' id="comments-pagination">
+      {% comment %}
+        Display comment from URL parameters if it is waiting moderation
+        We added "comment.id" check to make sure we don't display markup if there are form errors
+      {% endcomment %}
+      {% if comment and comment.status != 'published' and comment.id != blank %}
+        {% include 'jumplink-article-comment' with blog, article, comment, number_of_comments, new_comment %}
+      {% endif %}
+
+      {% for comment in article.comments %}
+        {% include 'jumplink-article-comment' with blog, article, comment, number_of_comments, new_comment %}
+      {% endfor %}
+    </ul>
+
+    {% if paginate.pages > 1 %}
+      {% include 'jumplink-pagination' with viewId: 'comments-pagination'%}
     {% endif %}
-
-    {% for comment in article.comments %}
-      {% include 'jumplink-article-comment' with blog, article, comment, number_of_comments, new_comment %}
-    {% endfor %}
-  </ul>
-{% endif %}
+  {% endif %}
+</div>
