--- a/theme/snippets/jumplink-contact-form.liquid
+++ b/theme/snippets/jumplink-contact-form.liquid
@@ -81,7 +81,7 @@
       </div>
       <p>The fields marked with * are required</p>
 
-      <button type="submit" class="btn btn-link" rv-on-click="send">Send Message</button>
+      <button type="submit" class="btn btn-animated-underline-dark font-weight-bold" rv-on-click="send">Send Message</button>
     </div>
   {% endform %}
 </rv-contact-form>
