--- a/theme/templates/collection.liquid
+++ b/theme/templates/collection.liquid
@@ -1,10 +1,12 @@
-<div class="container-fluid">
-  {% paginate collection.products by 20 %}
+<div class="container-fluid" rv-view='{"listenAllLinks": false, "containerSelector": "#products-pagination", "scrollToTop": false, "action": "append"}' id="products-pagination">
+  {% paginate collection.products by 40 %}
     <div class="row">
-        {% for product in collection.products %}
-          {% include 'jumplink-product-collection-grid-item-col-ratio-3-4' with product, collection, colClass: 'col-12 col-md-6' %}
-        {% endfor %}
+      {% for product in collection.products %}
+        {% include 'jumplink-product-collection-grid-item-col-ratio-3-4' with product, collection, colClass: 'col-12 col-md-6' %}
+      {% endfor %}
+      <div class="col-12">
+        {% include 'jumplink-pagination' with viewId: 'products-pagination' %}
+      </div>
     </div>
-    {% include 'jumplink-pagination', show_all_active: true %}
   {% endpaginate %}
 </div>
