--- a/theme/snippets/jumplink-article-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-article-item-col-ratio-3-4.liquid
@@ -3,6 +3,12 @@
 {% endif %}
 
 
+{% if article.content == blank %}
+  {% assign articleHasContent = false %}
+{% else %}
+  {% assign articleHasContent = true %}
+{% endif %}
+
 {% if article.metafields["global"]["video-1"] %}
   {% assign video = article.metafields["global"]["video-1"] %}
 {% endif %}
@@ -18,7 +24,7 @@
   {% endif %}
 {% endif %}
 
-<rv-shopify-article-item class="{{ colClass }} px-0 content-box ratio-3-4" rv-route="'{{ article.url }}'" href="{{article.url}}" style="background-color: {{ color }};">
+<rv-shopify-article-item class="{{ colClass }} px-0 content-box ratio-3-4" {% if articleHasContent %} rv-route="'{{ article.url }}'" href="{{article.url}}" {% endif %} style="background-color: {{ color }};">
   {% if showVideo %}
     <video class="content has-xs-spacing has-sm-spacing" preload="auto" controls>
       <source src="{{ video }}" type="video/mp4">
