--- a/theme/snippets/jumplink-article-list-item-view-2-grid-2-images.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-2-grid-2-images.liquid
@@ -30,8 +30,14 @@
   {% endif %}
 {% endif %}
 
+{% if article.content == blank %}
+  {% assign articleHasContent = false %}
+{% else %}
+  {% assign articleHasContent = true %}
+{% endif %}
+
 <rv-shopify-article-item>
-  <a rv-route="'{{ article.url }}'" href="{{article.url}}" data-tags='{% include 'jumplink-utils-json-tags', tags: article.tags %}' class="container-fluid position-relative jumplink-article-list-item jumplink-article-list-item-view-2-grid-2-images" style="background-color: {{ color }};">
+  <a {% if articleHasContent %} rv-route="'{{ article.url }}'" href="{{article.url}}" {% endif %} data-tags='{% include 'jumplink-utils-json-tags', tags: article.tags %}' class="container-fluid position-relative jumplink-article-list-item jumplink-article-list-item-view-2-grid-2-images" style="background-color: {{ color }};">
     <div class="row">
       {% if showVideo %}
 
