--- a/theme/snippets/jumplink-article-list-item-view-one-story.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-one-story.liquid
@@ -27,7 +27,13 @@
   {% endif %}
 {% endif %}
 
-<a rv-route="'{{ article.url }}'" href="{{article.url}}" data-tags='{% include 'jumplink-utils-json-tags', tags: article.tags %}' class="container-fluid position-relative jumplink-article-list-item jumplink-article-list-item-view-one-story" style="background-color: {{ color }};">
+{% if article.content == blank %}
+  {% assign articleHasContent = false %}
+{% else %}
+  {% assign articleHasContent = true %}
+{% endif %}
+
+<a {% if articleHasContent %} rv-route="'{{ article.url }}'" href="{{article.url}}" {% endif %} data-tags='{% include 'jumplink-utils-json-tags', tags: article.tags %}' class="container-fluid position-relative jumplink-article-list-item jumplink-article-list-item-view-one-story" style="background-color: {{ color }};">
   <rv-shopify-article-item>
     <div class="row">
       {% if showVideo %}
