--- a/theme/snippets/jumplink-pagination.liquid
+++ b/theme/snippets/jumplink-pagination.liquid
@@ -1,3 +1,7 @@
+{% unless viewId %},
+  {% assign viewId = 'main' %}
+{% endunless %}
+
 {% if paginate.pages > 1 %}
   <div class="row">
     <div class="col-12 text-center">
@@ -38,8 +42,8 @@
       {% endcomment %}
 
       {% if paginate.next.is_link %}
-        <a class="cursor-pointer pt-5" rv-route-append-on-click='{"url": "{{ paginate.next.url }}{{ paginate_hash }}", "appendToSelector": ".rv-view-container", "removeAfterLoad": true, "replaceHistory": true}' aria-label="{{ 'snippets.jumplink-pagination.load_more' | t }}">
-          <span>{{ 'snippets.jumplink-pagination.load_more' | t }}</span>
+        <a class="cursor-pointer pt-5" rv-route='{"url": "{{ paginate.next.url }}{{ paginate_hash }}", "viewId": "{{ viewId }}", "removeAfterActivation": true}' aria-label="{{ 'snippets.jumplink-pagination.load_more' | t }}">
+          <span>{{ 'snippets.jumplink-pagination.load_more' | t }} {{ viewId }}</span>
         </a>
       {% endif %}
 
