[Fix] Fix IE 11 syntax error

--- a/theme/snippets/jumplink-contact-form.liquid
+++ b/theme/snippets/jumplink-contact-form.liquid
@@ -38,7 +38,7 @@
       <h2 class="h6 mb-3">Any questions? Feel free to contact us.</h2>
 
       <p>
-        Send us a message to <a href="mailto:info@myfassbender.com">info@myfassbender.com</a>
+        Send us a message to <a href="mailto:customercare@myfassbender.com">customercare@myfassbender.com</a>
         or call us <a href="tel:+494403925400">+49 4403 925400</a><br>
         <small>monday - friday 10.00 - 18.00</small>
       </p>
