--- a/theme/sections/one-storie.liquid
+++ b/theme/sections/one-storie.liquid
@@ -65,7 +65,7 @@
               class="{{imageClass}}"
               id="ytplayer"
               type="text/html" 
-              src="http://www.youtube.com/embed/{{ video.id }}?color=white&modestbranding=1&rel=0&showinfo=0&controls=0"
+              src="http://www.youtube.com/embed/{{ video.id }}?color=white&modestbranding=1&rel=0&showinfo=0&controls=0&autoplay=1&mute=1"
               frameborder="0"></iframe>
           </div>
         {% elsif videoType == 'vimeo' %}
