--- a/theme/sections/one-storie.liquid
+++ b/theme/sections/one-storie.liquid
@@ -66,11 +66,24 @@
               id="ytplayer"
               type="text/html" 
               src="http://www.youtube.com/embed/{{ video.id }}?color=white&modestbranding=1&rel=0&showinfo=0&controls=0&autoplay=1&mute=1"
-              frameborder="0"></iframe>
+              frameborder="0"
+              webkitallowfullscreen
+              mozallowfullscreen
+              allowfullscreen
+              ></iframe>
           </div>
         {% elsif videoType == 'vimeo' %}
-          <div class="col px-0 content-box {{contentBoxClass}}">
-            <p class="{{imageClass}}">Vimeo Support coming soon..</p>
+          <div class="col px-0 content-box ratio-16-9">
+            <iframe
+              class="{{imageClass}}"
+              type="text/html" 
+              src="https://player.vimeo.com/video/{{ video.id }}?autoplay=1&loop=1&autopause=0&background=1&muted=1"
+              frameborder="0"
+              webkitallowfullscreen
+              mozallowfullscreen
+              allowfullscreen
+              >
+              </iframe>
           </div>
         {% elsif videoType == 'mp4' %}
           <div class="col px-0 content-box {{contentBoxClass}}">
