Some stuff we need for the next release, another ie 11 fix

--- a/src/scss/templates/_instagram.scss
+++ b/src/scss/templates/_instagram.scss
@@ -5,3 +5,8 @@
     bottom: 0;
   }
 }
+
+// TODO remove me and implement instagram api!
+[href='/pages/fassbender'], .instagram-scrollbar {
+  display: none;
+}
