--- a/theme/snippets/jumplink-shopping-cart-body.liquid
+++ b/theme/snippets/jumplink-shopping-cart-body.liquid
@@ -35,6 +35,7 @@
             Items
           </strong>
           <p class="my-0" rv-text="cart.total_price | money '{{ shop.money_format }}'"></p>
+          <p class="my-0">Free Shipping</p>
         </div>
 
         <div class="col d-flex flex-column align-items-end justify-content-center">
