--- a/theme/templates/page.legals.liquid
+++ b/theme/templates/page.legals.liquid
@@ -1,7 +1,7 @@
 <div class="container-fluid pt-5" id="page-{{ page.handle }}">
   <div class="row pt-md-5">
     {% unless page.content == blank %}
-        <div class="col-12 col-md-10 offset-md-2 rte">
+        <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte">
         {{ page.content }}
         </div>
     {% endunless %}
@@ -20,7 +20,7 @@
 
 <div class="container-fluid py-5 my-md-5" id="contact">
   <div class="row">
-    <div class="col-12 col-md-10 offset-md-2 rte">
+    <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte">
       {% include 'jumplink-contact-form' %}
     </div>
   </div>
