--- a/theme/templates/page.liquid
+++ b/theme/templates/page.liquid
@@ -1,6 +1,6 @@
 <div class="container-fluid pt-5">
   <div class="row pt-md-5">
-    <div class="col-12 col-md-10 offset-md-2">
+    <div class="col-12 col-md-8 offset-md-2 col-lg-6">
       <div class="row">
         <div class="col-12">
           {% unless page.title == blank %}
