--- a/theme/templates/page.newsletter.liquid
+++ b/theme/templates/page.newsletter.liquid
@@ -4,7 +4,7 @@
       {% section 'newsletter' %}
     </div>
     {% unless page.content == blank %}
-        <div class="col-12 col-md-10 offset-md-2 rte">
+        <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte">
         {{ page.content }}
         </div>
     {% endunless %}
