--- a/theme/templates/page.without-title.liquid
+++ b/theme/templates/page.without-title.liquid
@@ -1,7 +1,7 @@
 <div class="container-fluid pt-5" id="page-{{ page.handle }}">
   <div class="row pt-md-5">
     {% unless page.content == blank %}
-        <div class="col-12 col-md-10 offset-md-2 rte">
+        <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte">
         {{ page.content }}
         </div>
     {% endunless %}
