--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -54,7 +54,7 @@
         <div class="variant-chooser">
           <div rv-each-option="product.options" class="row px-3" rv-if="option.name | eq 'color'" rv-class="option.name">
             <div rv-each-color="option.values" class="col-auto px-1 cursor-pointer" rv-on-click="chooseOption | args self color option.position option.name">
-              <div class="styleicon-circle option-color option-variant-color" rv-class="color | replace_first '#' '' | prepend 'option-color-'" rv-css-background-color="color" style="width: 16px; height: 16px;"></div>
+              <div class="styleicon-circle option-color option-variant-color" rv-class="color | replace_first '#' '' | prepend 'option-color-'" rv-css-background-color="color" style="width: 20px; height: 20px;"></div>
             </div>
             {% for i in (1..4) %}
               {% assign colorIndex = "product-link-" | append: forloop.index | append: "-color" %}
@@ -66,7 +66,7 @@
                   class="col-auto px-1 cursor-pointer"
                   rv-route="'{{ all_products[handle].url }}'"
                 >
-                  <div class="styleicon-circle option-color option-metafield-color option-color-{{ color }}" rv-css-background-color="'{{ color }}'" style="width: 16px; height: 16px;"></div>
+                  <div class="styleicon-circle option-color option-metafield-color option-color-{{ color }}" rv-css-background-color="'{{ color }}'" style="width: 20px; height: 20px;"></div>
                 </div>
               {% endif %}
             {% endfor %}
@@ -126,7 +126,10 @@
 
           <div class="col-12 d-flex justify-content-end align-self-end mb-3" rv-show="showDetailMenu">
             <div class="btn-wrapper">
-              <button class="btn btn-animated-underline-dark" rv-enabled="available" rv-on-click="addToCart">Add</button>
+              <button class="btn btn-animated-underline-dark" rv-enabled="available" rv-on-click="addToCart">
+                <span rv-show="variant.available">Add</span>
+                <span rv-hide="variant.available">Sold Out</span>
+              </button>
             </div>
           </div>
 
