--- a/theme/snippets/jumplink-shopping-cart-body.liquid
+++ b/theme/snippets/jumplink-shopping-cart-body.liquid
@@ -35,7 +35,7 @@
             Items
           </strong>
           <p class="my-0" rv-text="cart.total_price | money '{{ shop.money_format }}'"></p>
-          <p class="my-0">Free Shipping</p>
+          <p class="mb-0 mt-1">Free Shipping<br><small>to all countries in th EU</small></p>
         </div>
 
         <div class="col d-flex flex-column align-items-end justify-content-center">
