--- a/theme/snippets/jumplink-article-list-item-view-magazine.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-magazine.liquid
@@ -41,6 +41,12 @@
   {% assign articleHasContent = false %}
 {% endif %}
 
+{% if articleHasContent and showVideo %}
+  {% assign linkToArticle = true %}
+{% else %}
+  {% assign linkToArticle = false %}
+{% endif %}
+
 {% comment %}
   If showDetail is true this snippet shows all the details of the blog article, otherwise only the stuff we want to show in the list view
 {% endcomment %}
@@ -49,7 +55,7 @@
   <rv-shopify-article-item data-handle="{{article.handle}}">
 
     {% if showVideo %}
-      <div class="row">
+      <div class="row {% if linkToArticle %}cursor-pointer{% endif %}" {% if linkToArticle %}rv-route="'{{article.url}}'"{% endif %}>
         <div class="col-12 col-md px-0 content-box {{ratioClass}}">
           <img class="content" src="{{ image }}" rv-src="'{{ image }}' | img_url '{{imageSize}}'" alt="{{article.title}}" style="padding: {{imageSpacing}}px" />
             <video class="content" preload="auto" controls>
@@ -61,7 +67,7 @@
     {% endif %}
 
     {% comment %} First image {% endcomment %}
-    <div class="row">
+    <div class="row {% if linkToArticle %}cursor-pointer{% endif %}" {% if linkToArticle %}rv-route="'{{article.url}}'"{% endif %}>
       {% for image in images limit:1 %}
         <div class="col-12 col-md px-0 content-box {{ratioClass}}">
           <img class="content" src="{{ image }}" rv-src="'{{ image }}' | img_url '{{imageSize}}'" alt="{{article.title}}" style="padding: {{imageSpacing}}px" />
@@ -70,7 +76,7 @@
     </div>
   
     {% comment %} Image 2-4 {% endcomment %}
-    <div class="row">
+    <div class="row {% if linkToArticle %}cursor-pointer{% endif %}" {% if linkToArticle %}rv-route="'{{article.url}}'"{% endif %}>
       {% for image in images offset:1 limit:2 %}
         <div class="col-12 col-md px-0 content-box {{ratioClass}}">
           <img class="content" src="{{ image }}" rv-src="'{{ image }}' | img_url '{{imageSize}}'" alt="{{article.title}}" style="padding: {{imageSpacing}}px" />
@@ -79,7 +85,7 @@
     </div>
 
     {% comment %} Image 4-.. {% endcomment %}
-    <div class="row">
+    <div class="row {% if linkToArticle %}cursor-pointer{% endif %}" {% if linkToArticle %}rv-route="'{{article.url}}'"{% endif %}>
       {% for image in images offset:3 %}
         <div class="col-12 col-md px-0 content-box {{ratioClass}}">
           <img class="content" src="{{ image }}" rv-src="'{{ image }}' | img_url '{{imageSize}}'" alt="{{article.title}}" style="padding: {{imageSpacing}}px" />
@@ -100,9 +106,9 @@
       </p>
       <hr>
       {% if showDetail %}
-        {{ article.excerpt_or_content }}
-      {% else %}
         {{ article.content }}
+      {% else %}
+        {{ article.excerpt_or_content }}
       {% endif %}
       <hr>
       <p>
@@ -111,7 +117,7 @@
             <rv-share title="{{ article.title }}" url="{{ article.url }}" text="Look at this story" label="Share this article">Share this article</rv-share>
              <span class="pl-3">{{ 'blogs.comments.with_count' | t: count: number_of_comments }}</span>
             {% unless showDetail %}
-              {% if articleHasContent %}
+              {% if linkToArticle %}
                 <a class="ml-auto float-right" rv-route="'{{article.url}}'">View Article</a>
               {% endif %}
             {% endunless %}
@@ -122,7 +128,7 @@
   </rv-shopify-article-item>
 
   {% if showDetail %}
-    <div class="px-5">
+    <div class="px-5 has-xs-spacing">
       {% include 'jumplink-article-comments' with comment, article, blog %}
     </div>
   {% endif %}
